# backend/src/controllers/productController.ts
@@ -13,17 +13,19 @@ export const create = async (req: Request, res: Response) => {
   try {
     // Lấy sản phẩm từ request body
     // @ts-ignore
-    const { name, category, description,size,sex,price,
-      quantity,import_price,sold,brand,supplier,
-      avata,image1,image2,image3,image4,image5,image6 } = req.body;
+    const { name, category, description, size, sex, price,
+      quantity, import_price, sold, brand, supplier,
+      avata, image1, image2, image3, image4, image5, image6 } = req.body;
     const productRepository = getRepository(Product);
-    const newProduct = productRepository.create({name, category, description,size,sex,price,
-      quantity,import_price,sold,brand,supplier,
-      avata,image1,image2,image3,image4,image5,image6 });
+    const newProduct = productRepository.create({
+      name, category, description, size, sex, price,
+      quantity, import_price, sold, brand, supplier,
+      avata, image1, image2, image3, image4, image5, image6
+    });
     await productRepository.save(newProduct);
     // Gửi sản phẩm đã tạo về client
     // @ts-ignore
-    return res.send({ Status: 400, Data: newProduct });
+    return res.send({ Status: 200, Data: newProduct });
   } catch (error) {
     console.error(error);
     return res.status(500).send({ Status: 400, Data: 'Internal Server Error' });
@@ -39,15 +41,17 @@ export const update = async (req: Request, res: Response) => {
   try {
     // Lấy sản phẩm từ request body
     // @ts-ignore
-    const { name, category, description,size,sex,price,
-      quantity,import_price,sold,brand,supplier,
-      avata,image1,image2,image3,image4,image5,image6  } = req.body;
+    const { name, category, description, size, sex, price,
+      quantity, import_price, sold, brand, supplier,
+      avata, image1, image2, image3, image4, image5, image6 } = req.body;
     const productRepository = getRepository(Product);
     // Cập nhật sản phẩm trong cơ sở dữ liệu
     // @ts-ignore
-    const response = await productRepository.update(Number(req.params.id), {name, category, description,size,sex,price,
-      quantity,import_price,sold,brand,supplier,
-      avata,image1,image2,image3,image4,image5,image6 });
+    const response = await productRepository.update(Number(req.params.id), {
+      name, category, description, size, sex, price,
+      quantity, import_price, sold, brand, supplier,
+      avata, image1, image2, image3, image4, image5, image6
+    });
     // Gửi sản phẩm đã cập nhật về client
     return res.send({ Status: 200, Data: response });
   } catch (error) {
@@ -61,30 +65,30 @@ export const update = async (req: Request, res: Response) => {
  * @param req Request object từ client.
  * @param res Response object để gửi kết quả về client.
  */
-export const list = async (req: Request, res: Response) => {
+
+export const list = async (req: Request, res: Response): Promise<Response> => {
   try {
-    const { keyword, category } = req.body;
+    const { keyword, category, brand } = req.body;
     const productRepository = getRepository(Product);
     // Lấy tất cả sản phẩm từ cơ sở dữ liệu
     const products = await productRepository.find();
-    // Lọc sản phẩm theo từ khóa và danh mục
-    if (keyword != null) {
-      return res.status(200).send({
-        Status: 200, Data: products.filter(product =>
-          product.name.toLowerCase().includes(keyword.toLowerCase()) &&
-          product.category.toLowerCase().includes(category.toLowerCase())
-        )
-      });
-  } else {
-    return res.status(200).send({
-      Status: 200, Data: products     
+    // Lọc sản phẩm theo từ khóa, danh mục và thương hiệu (nếu được chỉ định)
+    const filteredProducts = products.filter(product => {
+      const isInCategory = category ? product.category.toLowerCase().includes(category.toLowerCase()) : true;
+      const isInBrand = brand ? product.brand.toLowerCase().includes(brand.toLowerCase()) : true;
+      return product.name.toLowerCase().includes(keyword.toLowerCase()) && isInCategory && isInBrand;
     });
-  }
+
+    return res.status(200).json({
+      Status: 200,
+      Data: filteredProducts
+    });
   } catch (error) {
     console.error(error);
-    return res.status(500).send({ Status: 400, Data: 'Internal Server Error' });
+    return res.status(500).json({ Status: 400, Data: 'Internal Server Error' });
   }
 };
+
 
 /**
  * Xóa một sản phẩm dựa trên ID.
