# backend/src/routes/Router.ts
@@ -6,6 +6,7 @@ import categoryRouter from "./category.route";
 import productRouter from "./product.route";
 import orderRouter from "./order.route"
 import voucherRouter from "./voucher.router"
+import cartRouter from "./cart.route"
 
 const router = Router();
 
@@ -16,5 +17,6 @@ router.use("/category", categoryRouter)
 router.use("/product", productRouter)
 router.use("/order", orderRouter)
 router.use("/voucher", voucherRouter)
+router.use("/cart", cartRouter)
 
 export default router;
